--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ajoelp/json-to-formdata": "^1.5.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
@@ -26,6 +27,7 @@
     "next": "15.1.8",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
