--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/umami": "^2.10.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
